// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogItem has a responsive image on blog page when needed 1`] = `
<BlogItem
  blogDate="October 5th, 2019"
  blogExcerpt="Test excerpt for blog post"
  blogImageObj={
    Object {
      "backgroundColor": "#f8f8f8",
      "height": 720,
      "images": Object {
        "fallback": Object {
          "sizes": "(min-width: 1280px) 1280px, 100vw",
          "src": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg",
          "srcSet": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/b4dad/how_to_give_online.jpg 320w,
/static/c90198e7ad3cd5c53c0ee08adf7317b0/3440d/how_to_give_online.jpg 640w,
/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg 1280w",
        },
        "sources": Array [
          Object {
            "sizes": "(min-width: 1280px) 1280px, 100vw",
            "srcSet": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/c0bcc/how_to_give_online.webp 320w,
/static/c90198e7ad3cd5c53c0ee08adf7317b0/17574/how_to_give_online.webp 640w,
/static/c90198e7ad3cd5c53c0ee08adf7317b0/71d4d/how_to_give_online.webp 1280w",
            "type": "image/webp",
          },
        ],
      },
      "layout": "constrained",
      "width": 1280,
    }
  }
  blogLink="test-excerpt-for-blog-post"
  blogTitle="Reaaaaaaaaaaaaaaaaaaaaaaaaaaaaalllllyyyyy looooooooooooooong title"
  onBlogIndex={true}
>
  <div
    className="blog-info-container column content is-medium is-full-tablet  is-6"
  >
    <figure
      className="image blog-image"
    >
      <V
        alt=""
        image={
          Object {
            "backgroundColor": "#f8f8f8",
            "height": 720,
            "images": Object {
              "fallback": Object {
                "sizes": "(min-width: 1280px) 1280px, 100vw",
                "src": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg",
                "srcSet": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/b4dad/how_to_give_online.jpg 320w,
/static/c90198e7ad3cd5c53c0ee08adf7317b0/3440d/how_to_give_online.jpg 640w,
/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg 1280w",
              },
              "sources": Array [
                Object {
                  "sizes": "(min-width: 1280px) 1280px, 100vw",
                  "srcSet": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/c0bcc/how_to_give_online.webp 320w,
/static/c90198e7ad3cd5c53c0ee08adf7317b0/17574/how_to_give_online.webp 640w,
/static/c90198e7ad3cd5c53c0ee08adf7317b0/71d4d/how_to_give_online.webp 1280w",
                  "type": "image/webp",
                },
              ],
            },
            "layout": "constrained",
            "width": 1280,
          }
        }
      >
        <U
          className="gatsby-image-wrapper gatsby-image-wrapper-constrained"
          data-gatsby-image-wrapper=""
          style={
            Object {
              "backgroundColor": undefined,
              "display": "inline-block",
              "overflow": "hidden",
              "position": "relative",
              "verticalAlign": "top",
            }
          }
        >
          <div
            className="gatsby-image-wrapper gatsby-image-wrapper-constrained"
            data-gatsby-image-wrapper=""
            style={
              Object {
                "backgroundColor": undefined,
                "display": "inline-block",
                "overflow": "hidden",
                "position": "relative",
                "verticalAlign": "top",
              }
            }
          >
            <P
              height={720}
              layout="constrained"
              width={1280}
            >
              <C
                height={720}
                layout="constrained"
                width={1280}
              >
                <div
                  style={
                    Object {
                      "display": "block",
                      "maxWidth": 1280,
                    }
                  }
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    role="presentation"
                    src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='1280' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                    style={
                      Object {
                        "display": "block",
                        "maxWidth": "100%",
                        "position": "static",
                      }
                    }
                  />
                </div>
              </C>
              <Placeholder
                aria-hidden={true}
                data-placeholder-image=""
                style={
                  Object {
                    "height": "100%",
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <div
                  aria-hidden={true}
                  data-placeholder-image=""
                  style={
                    Object {
                      "height": "100%",
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                    }
                  }
                />
              </Placeholder>
              <MainImage
                alt=""
                data-gatsby-image-ssr=""
                data-main-image=""
                fallback={
                  Object {
                    "sizes": "(min-width: 1280px) 1280px, 100vw",
                    "src": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg",
                    "srcSet": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/b4dad/how_to_give_online.jpg 320w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/3440d/how_to_give_online.jpg 640w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg 1280w",
                  }
                }
                loading="lazy"
                onLoad={[Function]}
                shouldLoad={false}
                sources={
                  Array [
                    Object {
                      "sizes": "(min-width: 1280px) 1280px, 100vw",
                      "srcSet": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/c0bcc/how_to_give_online.webp 320w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/17574/how_to_give_online.webp 640w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/71d4d/how_to_give_online.webp 1280w",
                      "type": "image/webp",
                    },
                  ]
                }
                style={
                  Object {
                    "backgroundColor": undefined,
                    "height": "100%",
                    "left": 0,
                    "objectFit": undefined,
                    "objectPosition": undefined,
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "transform": "translateZ(0)",
                    "transition": "opacity 250ms linear",
                    "width": "100%",
                    "willChange": "opacity",
                  }
                }
              >
                <Picture
                  alt=""
                  data-gatsby-image-ssr=""
                  data-main-image=""
                  fallback={
                    Object {
                      "sizes": "(min-width: 1280px) 1280px, 100vw",
                      "src": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg",
                      "srcSet": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/b4dad/how_to_give_online.jpg 320w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/3440d/how_to_give_online.jpg 640w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg 1280w",
                    }
                  }
                  loading="lazy"
                  onLoad={[Function]}
                  shouldLoad={false}
                  sources={
                    Array [
                      Object {
                        "sizes": "(min-width: 1280px) 1280px, 100vw",
                        "srcSet": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/c0bcc/how_to_give_online.webp 320w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/17574/how_to_give_online.webp 640w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/71d4d/how_to_give_online.webp 1280w",
                        "type": "image/webp",
                      },
                    ]
                  }
                  style={
                    Object {
                      "backgroundColor": undefined,
                      "height": "100%",
                      "left": 0,
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "opacity": 0,
                      "position": "absolute",
                      "top": 0,
                      "transform": "translateZ(0)",
                      "transition": "opacity 250ms linear",
                      "width": "100%",
                      "willChange": "opacity",
                    }
                  }
                >
                  <picture>
                    <source
                      data-srcset="/static/c90198e7ad3cd5c53c0ee08adf7317b0/c0bcc/how_to_give_online.webp 320w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/17574/how_to_give_online.webp 640w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/71d4d/how_to_give_online.webp 1280w"
                      key="undefined-image/webp-/static/c90198e7ad3cd5c53c0ee08adf7317b0/c0bcc/how_to_give_online.webp 320w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/17574/how_to_give_online.webp 640w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/71d4d/how_to_give_online.webp 1280w"
                      sizes="(min-width: 1280px) 1280px, 100vw"
                      type="image/webp"
                    />
                    <O
                      alt=""
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      innerRef={null}
                      loading="lazy"
                      onLoad={[Function]}
                      shouldLoad={false}
                      sizes="(min-width: 1280px) 1280px, 100vw"
                      src="/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg"
                      srcSet="/static/c90198e7ad3cd5c53c0ee08adf7317b0/b4dad/how_to_give_online.jpg 320w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/3440d/how_to_give_online.jpg 640w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg 1280w"
                      style={
                        Object {
                          "backgroundColor": undefined,
                          "height": "100%",
                          "left": 0,
                          "objectFit": undefined,
                          "objectPosition": undefined,
                          "opacity": 0,
                          "position": "absolute",
                          "top": 0,
                          "transform": "translateZ(0)",
                          "transition": "opacity 250ms linear",
                          "width": "100%",
                          "willChange": "opacity",
                        }
                      }
                    >
                      <img
                        alt=""
                        data-gatsby-image-ssr=""
                        data-main-image=""
                        data-src="/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg"
                        data-srcset="/static/c90198e7ad3cd5c53c0ee08adf7317b0/b4dad/how_to_give_online.jpg 320w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/3440d/how_to_give_online.jpg 640w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg 1280w"
                        decoding="async"
                        loading="lazy"
                        onLoad={[Function]}
                        sizes="(min-width: 1280px) 1280px, 100vw"
                        style={
                          Object {
                            "backgroundColor": undefined,
                            "height": "100%",
                            "left": 0,
                            "objectFit": undefined,
                            "objectPosition": undefined,
                            "opacity": 0,
                            "position": "absolute",
                            "top": 0,
                            "transform": "translateZ(0)",
                            "transition": "opacity 250ms linear",
                            "width": "100%",
                            "willChange": "opacity",
                          }
                        }
                      />
                    </O>
                  </picture>
                </Picture>
                <noscript>
                  <Picture
                    alt=""
                    data-gatsby-image-ssr=""
                    data-main-image=""
                    fallback={
                      Object {
                        "sizes": "(min-width: 1280px) 1280px, 100vw",
                        "src": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg",
                        "srcSet": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/b4dad/how_to_give_online.jpg 320w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/3440d/how_to_give_online.jpg 640w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/4a49b/how_to_give_online.jpg 1280w",
                      }
                    }
                    loading="lazy"
                    onLoad={[Function]}
                    shouldLoad={true}
                    sources={
                      Array [
                        Object {
                          "sizes": "(min-width: 1280px) 1280px, 100vw",
                          "srcSet": "/static/c90198e7ad3cd5c53c0ee08adf7317b0/c0bcc/how_to_give_online.webp 320w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/17574/how_to_give_online.webp 640w,/static/c90198e7ad3cd5c53c0ee08adf7317b0/71d4d/how_to_give_online.webp 1280w",
                          "type": "image/webp",
                        },
                      ]
                    }
                    style={
                      Object {
                        "backgroundColor": undefined,
                        "height": "100%",
                        "left": 0,
                        "objectFit": undefined,
                        "objectPosition": undefined,
                        "opacity": 0,
                        "position": "absolute",
                        "top": 0,
                        "transform": "translateZ(0)",
                        "transition": "opacity 250ms linear",
                        "width": "100%",
                        "willChange": "opacity",
                      }
                    }
                  />
                </noscript>
              </MainImage>
              <D>
                <script
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "const t=\\"undefined\\"!=typeof HTMLImageElement&&\\"loading\\"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll(\\"img[data-main-image]\\");for(let e of t){e.dataset.src&&(e.setAttribute(\\"src\\",e.dataset.src),e.removeAttribute(\\"data-src\\")),e.dataset.srcset&&(e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\"));const t=e.parentNode.querySelectorAll(\\"source[data-srcset]\\");for(let e of t)e.setAttribute(\\"srcset\\",e.dataset.srcset),e.removeAttribute(\\"data-srcset\\");e.complete&&(e.style.opacity=1)}}",
                    }
                  }
                  type="module"
                />
              </D>
            </P>
          </div>
        </U>
      </V>
    </figure>
    <div
      className="blog-info"
    >
      <h2
        className="title is-5"
      >
        <mockConstructor
          to="test-excerpt-for-blog-post"
        >
          <a
            href="test-excerpt-for-blog-post"
          >
            Reaaaaaaaaaaaaaaaaaaaaaaaaaaaaalllllyyyyy looooooooooooooong title
          </a>
        </mockConstructor>
      </h2>
      <h3
        className="subtitle is-7"
      >
         
      </h3>
    </div>
    <p
      className="blog-excerpt"
    >
      Test excerpt for blog post
      ...
    </p>
    <mockConstructor
      className="button is-link"
      to="test-excerpt-for-blog-post"
    >
      <a
        className="button is-link"
        href="test-excerpt-for-blog-post"
      >
        Read Post
      </a>
    </mockConstructor>
  </div>
</BlogItem>
`;

exports[`BlogItem has an image on blog page when needed 1`] = `
<BlogItem
  blogDate="October 5th, 2019"
  blogExcerpt="Test excerpt for blog post"
  blogImage="src/assets/image.jpg"
  blogLink="test-excerpt-for-blog-post"
  blogTitle="Reaaaaaaaaaaaaaaaaaaaaaaaaaaaaalllllyyyyy looooooooooooooong title"
  onBlogIndex={true}
>
  <div
    className="blog-info-container column content is-medium is-full-tablet  is-6"
  >
    <figure
      className="image blog-image"
    >
      <img
        alt=""
        src="src/assets/image.jpg"
      />
    </figure>
    <div
      className="blog-info"
    >
      <h2
        className="title is-5"
      >
        <mockConstructor
          to="test-excerpt-for-blog-post"
        >
          <a
            href="test-excerpt-for-blog-post"
          >
            Reaaaaaaaaaaaaaaaaaaaaaaaaaaaaalllllyyyyy looooooooooooooong title
          </a>
        </mockConstructor>
      </h2>
      <h3
        className="subtitle is-7"
      >
         
      </h3>
    </div>
    <p
      className="blog-excerpt"
    >
      Test excerpt for blog post
      ...
    </p>
    <mockConstructor
      className="button is-link"
      to="test-excerpt-for-blog-post"
    >
      <a
        className="button is-link"
        href="test-excerpt-for-blog-post"
      >
        Read Post
      </a>
    </mockConstructor>
  </div>
</BlogItem>
`;

exports[`BlogItem should render without crashing 1`] = `
<div
  className="blog-info-container column content   is-one-third-desktop "
>
  <div
    className="blog-info"
  >
    <h2
      className="title is-5"
    >
      <mockConstructor
        to="https://linktosite.com"
      >
        Test Title
      </mockConstructor>
    </h2>
    <h3
      className="subtitle is-7"
    >
       
    </h3>
  </div>
  <p
    className="blog-excerpt"
  >
    Test excerpt for blog post
    ...
  </p>
  <mockConstructor
    className="button is-link"
    to="https://linktosite.com"
  >
    Read Post
  </mockConstructor>
</div>
`;
